# baktsiu

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md
docs/: quickstart_guide.md
ext/: CMakeLists.txt
ext/fx/: gltf.h
ext/gl3w/GL/: gl3w.h
ext/imgui/: imconfig.h  imgui_demo.cpp
resources/: baktsiu.desktop  icon.icns  icon.pptx  icon.rc  res2c.cpp
shaders/: color_grading.frag  present.frag  quad.vert  statistics.comp
src/: CMakeLists.txt  app.cpp  app.h  colour.cpp  colour.h  common.h  image.cpp  image.h  main.cpp  session_generated.h  shader.cpp  shader.h  texture.cpp  texture.h  texture_pool.cpp  texture_pool.h  view.cpp  view.h
